Fix alignment in mobile view

--- a/src/scripts/h5p-info-wall-panel.scss
+++ b/src/scripts/h5p-info-wall-panel.scss
@@ -13,6 +13,7 @@
 
   .h5p-info-wall-panel-entries-wrapper {
     flex: 1 1 auto;
+    width: 100%;
 
     .h5p-info-wall-panel-entries {
       border-spacing: 0 .5em;
